--- a/geokassa/Properties/launchSettings.json
+++ b/geokassa/Properties/launchSettings.json
@@ -1,9 +1,9 @@
 {
   "profiles": {
     "geokassa": {
-      "commandName": "Project",
-      "commandLineArgs": "geokassa lsc2geotiff Test_source_geogr.csv Test_target_geogr.csv geokassa.tif --type 0 --dim 2 --gridname no_kv_NKGETRF14_EPSG7922_2000 --email skakar@kartverket.no --area \"Norway - onshore\" --desc \"Geocentric translation from NKG:ETRF14 to EPSG:7922.\" --epsg2d EPSG:9069 --epsgsource NKG:ETRF14 --epsgtarget EPSG:7922 --lle 9.0 --lln 59.0 --de 0.1 --dn 0.1 --rows 40 --cols 40 --tilesize 16 --c0 0.0008 --cl 150000 --sn 0.025",
-      "workingDirectory": "C:\\Users\\Administrator\\source\\repos\\transanalyse\\NKG_Accuracy\\Mod_Helmert"
+        "commandName": "Project",
+        "commandLineArgs": "geokassa lsc2geotiff ETRF14_e2000_nkg17_all.csv 7922_e2000_nkg17_correct.csv no_kv_NKGETRF14_EPSG7922_2000.tif --type 3 --gridname no_kv_NKGETRF14_EPSG7922_2000 --email skakar@kartverket.no --area \"Norway - onshore\" --desc \"Geocentric translation from NKG:ETRF14 to EPSG:7922.\" --epsg2d EPSG:9069 --epsgsource NKG:ETRF14 --epsgtarget EPSG:7922 --lle 4.0 --lln 57.0 --de 0.04 --dn 0.02 --rows 740 --cols 720 --tilesize 256 --agl 400 --c0 0.002 --cl 120000 --sn 0.020",
+        "workingDirectory": "C:\\Users\\Administrator\\source\\repos\\transanalyse\\NKG_Accuracy\\Mod_Helmert"
     }
   }
 }
