--- a/geokassa/Properties/launchSettings.json
+++ b/geokassa/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "geokassa": {
       "commandName": "Project",
-      "commandLineArgs": "geokassa csvs2ct2 --flat 3.5 --flon 4.3   EUREF89_epsg1182.fri   ED50_epsg1182.fri   EUREF89_ED50_test.ct2",
+      "commandLineArgs": "geokassa merge --type ct2 ED50_epsg1182.fri ED50_epsg1182.fri",
       "workingDirectory": "C:\\Prosjekter\\ED50"
     }
   }
