--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 .vs/GeoKassa/v15/Server/sqlite3/storage.ide-shm
 .vs/GeoKassa/v15/Server/sqlite3/storage.ide-wal
 .vs/GeoKassa/DesignTimeBuild/.dtbcache
+geokassa/bin/Debug/geokassa_.1.2.0.nupkg
 geokassa/bin/Debug/geokassa_.1.0.0.nupkg
 geokassa/bin/Debug/netcoreapp2.1/geokassa_.deps.json
 geokassa/bin/Debug/netcoreapp2.1/geokassa_.dll
