--- a/geokassa/Properties/launchSettings.json
+++ b/geokassa/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "geokassa": {
       "commandName": "Project",
-      "commandLineArgs": "geokassa merge --type ct2 EUREF89_ED50_land.ct2 EUREF89_ED50_sea.ct2 merge.ct2",
+      "commandLineArgs": "geokassa csvs2ct2 --desc \"Horizontal grid corrections from ED50 to ETRS89\" ED50_epsg1182_source.fri EUREF89_epsg1182_sea_target.fri ED50_EUREF89_sea.ct2",
       "workingDirectory": "C:\\Prosjekter\\ED50"
     }
   }
