--- a/geokassa/Properties/launchSettings.json
+++ b/geokassa/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "geokassa": {
       "commandName": "Project",
-      "commandLineArgs": "geokassa merge --type ct2 --desc \"Horizonal correction grid ED50 to ETRS89 for extent EPSG:1182\" ED50_EUREF89_land.ct2 ED50_EUREF89_sea.ct2 ED50_EUREF89.ct2",
+      "commandLineArgs": "geokassa csvs2ct2 --dir inv ED50_epsg1182_source.fri EUREF89_epsg1182_sea_target.fri  ETRS89_ED50_sea_.ct2",
       "workingDirectory": "C:\\Prosjekter\\ED50"
     }
   }
