--- a/gridfiles/gridfiles.csproj
+++ b/gridfiles/gridfiles.csproj
@@ -21,6 +21,8 @@
     <PackageReference Include="Delaunator" Version="1.0.7" />
     <PackageReference Include="GeoJSON.Net" Version="1.2.19" />
     <PackageReference Include="MathNet.Numerics" Version="4.15.0" />
+    <PackageReference Include="NetTopologySuite" Version="2.3.0" />
+    <PackageReference Include="NetTopologySuite.IO.GeoJSON" Version="2.0.4" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
