--- a/geokassa/geokassa.csproj
+++ b/geokassa/geokassa.csproj
@@ -23,4 +23,8 @@
     <ProjectReference Include="..\gridfiles\gridfiles.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Scripts\" />
+  </ItemGroup>
+
 </Project>
