--- a/geokassa/Properties/launchSettings.json
+++ b/geokassa/Properties/launchSettings.json
@@ -2,8 +2,8 @@
   "profiles": {
     "geokassa": {
       "commandName": "Project",
-      "commandLineArgs": "geokassa bin2gtx ChartDatum_above_Ellipsoid_EUREF89_v2021a.bin ChartDatum_above_Ellipsoid_EUREF89_v2021a.gtx",
-      "workingDirectory": "C:\\Prosjekter\\Høgde\\Sjø"
+      "commandLineArgs": "geokassa lsc2geotiff ETRF14_e2000_nkg17_all.csv 7922_e2000_nkg17_correct.csv testing_params.tif --type 3 --gridname no_kv_NKGETRF14_EPSG7922_2000 --email skakar@kartverket.no --area \"Norway - onshore\" --desc \"Geocentric translations from NKG:ETRF14 to EPSG:7922.\" --epsg2d EPSG:9069 --epsgsource NKG:ETRF14 --epsgtarget EPSG:7922 --lle 4.0 --lln 57.0 --de 0.04 --dn 0.02 --agl 400.0 --rows 740 --cols 720 --tilesize 256 --c0 0.0008 --cl 120000 --sn 0.025",
+      "workingDirectory": "C:\\Users\\Administrator\\source\\repos\\transanalyse\\NKG_Accuracy\\Mod_Helmert"
     }
   }
 }
