--- a/geokassa/Properties/launchSettings.json
+++ b/geokassa/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "geokassa": {
       "commandName": "Project",
-      "commandLineArgs": "geokassa bin2geotiff ChartDatum_above_Ellipsoid_EUREF89_v2021a.bin no_kv_CD_above_Ell_ETRS89_v2021a.tif --gridname no_kv_CD_above_Ell_ETRS89_v2021a --epsg3d EPSG:4937 --epsgtarget EPSG:9672 --tilesize 64 --type vsep --epsg2d EPSG:4258 --desc \"ETRS89 height (EPSG:4937) to CD Norway height (EPSG:9672). Converted from ChartDatum_above_Ellipsoid_EUREF89_v2021a.bin.\" --email vesola@kartverket.no --area \"Norway - onshore\"",
+      "commandLineArgs": "geokassa tiffvalue \"C:\\Users\\himsve\\Miniconda3\\Library\\share\\proj\\eur_nkg_nkgrf17vel.tif\"",
       "workingDirectory": "C:\\Prosjekter\\Høgde\\Sjø"
     }
   }
