--- a/.gitignore
+++ b/.gitignore
@@ -217,3 +217,6 @@ geokassa/obj/Debug/netcoreapp2.1/geokassa.genruntimeconfig.cache
 geokassa/bin/Debug/
 geokassa/obj/Debug/geokassa.1.3.0.nuspec
 geokassa/obj/Release/geokassa.1.3.0.nuspec
+geokassa/obj/
+gridfiles/obj/
+geokassatest/obj/
