--- a/.gitignore
+++ b/.gitignore
@@ -220,3 +220,13 @@ geokassa/obj/Release/geokassa.1.3.0.nuspec
 geokassa/obj/
 gridfiles/obj/
 geokassatest/obj/
+geokassa/bin/x64/Debug/geokassa.1.3.0.nupkg
+geokassa/bin/x64/Debug/netcoreapp2.1/geokassa.deps.json
+geokassa/bin/x64/Debug/netcoreapp2.1/geokassa.dll
+geokassa/bin/x64/Debug/netcoreapp2.1/geokassa.pdb
+geokassa/bin/x64/Debug/netcoreapp2.1/geokassa.runtimeconfig.dev.json
+geokassa/bin/x64/Debug/netcoreapp2.1/geokassa.runtimeconfig.json
+geokassa/bin/x64/Debug/netcoreapp2.1/gridfiles.dll
+geokassa/bin/x64/Debug/netcoreapp2.1/gridfiles.pdb
+geokassatest/bin/
+gridfiles/bin/
