--- a/geokassa/geokassa.csproj
+++ b/geokassa/geokassa.csproj
@@ -13,6 +13,19 @@
     <RootNamespace>geokassa</RootNamespace>
     <PackageId>geokassa</PackageId>
     <Copyright>Kartverket</Copyright>
+    <Platforms>AnyCPU;x64</Platforms>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <OutputPath>..\x64\Release</OutputPath>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <OutputPath>..\x64\Release</OutputPath>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <OutputPath></OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
