--- a/geokassatest/geokassatests.csproj
+++ b/geokassatest/geokassatests.csproj
@@ -12,6 +12,16 @@
     <Product>geokassa</Product>
 
     <Copyright>Kartverket</Copyright>
+
+    <Platforms>AnyCPU;x64</Platforms>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <OutputPath>..\x64\Release</OutputPath>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <OutputPath>..\x64\Release</OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
