--- a/geokassa/Properties/launchSettings.json
+++ b/geokassa/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "geokassa": {
       "commandName": "Project",
-      "commandLineArgs": "geokassa bin2geotiff \"C:\\Prosjekter\\Høgde\\Svalbard\\arcgp-2006-sk.bin\" \"C:\\Prosjekter\\Høgde\\Svalbard\\no_kv_arcgp-2006-sk.tif\" --gridname \"no_kv_arcgp-2006-sk\" --epsg3d EPSG:4937 --epsgtarget EPSG:20000 --tilesize 64 --type vsep --epsg2d EPSG:4258 --desc \"ETRS89 height (EPSG:4937) to SVD2006 height (EPSG:20000). Converted from arcgp-2006-sk.bin.\" --email himsve@kartverket.no --area \"Arctic - 81°10'N to 76°10'N, 4°W to 38°E\"",
+      "commandLineArgs": "geokassa bin2geotiff \"C:\\Prosjekter\\Høgde\\Svalbard\\arcgp-2006-sk.bin\" \"C:\\Prosjekter\\Høgde\\Svalbard\\no_kv_arcgp-2006-sk.tif\" --gridname \"no_kv_arcgp-2006-sk\" --epsg3d EPSG:4937 --epsgtarget EPSG:20000 --tilesize 64 --type geoid --epsg2d EPSG:4258 --desc \"ETRS89 height (EPSG:4937) to SVD2006 height (EPSG:20000). Converted from arcgp-2006-sk.bin.\" --email himsve@kartverket.no --area \"Arctic - 81°10'N to 76°10'N, 4°W to 38°E\"",
       "workingDirectory": "C:\\Prosjekter\\Høgde\\Svalbard"
     }
   }
