--- a/geokassa/Properties/launchSettings.json
+++ b/geokassa/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "geokassa": {
       "commandName": "Project",
-      "commandLineArgs": "geokassa clip \"C:\\Users\\himsve\\Anaconda3\\Library\\share\\proj\\no_kv_HREF2018B_NN2000_EUREF89.tif\" \"c:\\temp\\output.tif\" --type tiff --bbox 4 76.1666666666666667 38  81.1666666666666667",
+      "commandLineArgs": "geokassa clip \"C:\\Users\\himsve\\Anaconda3\\Library\\share\\proj\\no_kv_HREF2018B_NN2000_EUREF89.tif\" \"c:\\temp\\output.tif\" --type tiff --bbox 6.003 59.004 9.002 62.001",
       "workingDirectory": "C:\\Prosjekter\\ED50"
     }
   }
