--- a/geokassa/geokassa.csproj
+++ b/geokassa/geokassa.csproj
@@ -45,6 +45,6 @@
     </None>
   </ItemGroup>
 
-  <ProjectExtensions><VisualStudio><UserProperties schemas_4geocentric-pointlist_1schema_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+  <ProjectExtensions><VisualStudio><UserProperties /></VisualStudio></ProjectExtensions>
 
 </Project>
