--- a/geokassa/Properties/launchSettings.json
+++ b/geokassa/Properties/launchSettings.json
@@ -2,8 +2,8 @@
   "profiles": {
     "geokassa": {
       "commandName": "Project",
-      "commandLineArgs": "geokassa lsc2geotiff \"c:\\Temp\\test.json\" no_kv_NKGETRF14_EPSG7922_2000.tif --type 3 --gridname no_kv_NKGETRF14_EPSG7922_2000 --email skakar@kartverket.no --area \"Norway - onshore\" --desc \"Geocentric translations from NKG:ETRF14 to EPSG:7922.\" --epsg2d EPSG:9069 --epsgsource NKG:ETRF14 --epsgtarget EPSG:7922 --lle 4.0 --lln 57.0 --de 0.04 --dn 0.02 --agl 400.0 --rows 740 --cols 720 --tilesize 256 --c0 0.0004 --cl 100000 --sn 0.025",
-      "workingDirectory": "C:\\Users\\Administrator\\source\\repos\\transanalyse\\NKG_Accuracy\\Mod_Helmert"
+      "commandLineArgs": "geokassa csv2geotiff Uplift_Svalbard_pdim_pgs_tot.dat output.tiff --type vel --gridname \"Test\" --area \"Norway including Svalbard - onshore and offshore.\" --epsg2d EPSG:4258 --epsg3d EPSG:4258 --epsgsource EPSG:4258 --epsgtarget EPSG:9755 --version 1.0 --email \"sveinung.himle@kartverket.no\" --tilesize 32 --desc \"Velocity model Svalbard\"",
+      "workingDirectory": "C:\\SkTrans\\TransBib\\Init"
     }
   }
 }
