--- a/geokassa/geokassa.csproj
+++ b/geokassa/geokassa.csproj
@@ -2,10 +2,10 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <StartupObject>geokassa.Program</StartupObject>
     <Authors>Sveinung Himle</Authors>
-    <Version>1.5.0</Version>
+    <Version>1.6.0</Version>
     <Company>Kartverket</Company>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
