--- a/geokassatest/geokassatests.csproj
+++ b/geokassatest/geokassatests.csproj
@@ -1,11 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
 
     <IsPackable>false</IsPackable>
 
-    <Version>1.5.0</Version>
+    <Version>1.6.0</Version>
 
     <Company>Kartverket</Company>
 
